<resources>
    <string name="app_name">Dentify Dental Identify</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_diagnosis">Diagnosis</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_signup">ActivitySignup</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to Dental Identify</string>
    <string name="senyum">Your Smile Shows Your Health</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="masuk_dengan">----- Sign in with -----</string>
    <string name="log_guest">----- Sign in as a guest -----</string>
    <string name="btnGoogle">Sign in with Google</string>
    <string name="btnFb">Sign in with Facebook</string>
    <string name="logo">Mouth logo</string>

    <string name="i_agree_to_">I agree to the Terms of Service and Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="daftar_dengan">------ or sign in with -----</string>

    <string name="bersama">Together We Maintain Oral Health</string>
    <string name="unggah">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="camera">camera</string>
    <string name="galery">Gallery</string>
    <string name="upload_from">Upload from :</string>
    <string name="upload_title">Upload your mouth picture</string>
    <string name="time">17:00 15 February 2023</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="title_search">Search history</string>
    <string name="description_home">Your mouth check history</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="logout">Logout</string>
    <string name="akun">Account</string>
    <string name="light_mode">Tema Terang</string>
    <string name="dark_mode">Tema Gelap</string>
    <string name="language">Language</string>
    <string name="alert_camera">Make sure the lighting is sufficient and the captured image is clear</string>
    <string name="alert_camera_title">Alert</string>
    <string name="alert_camera_confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="option">Option</string>
    <string name="terms_of_service_privacy_policy"><![CDATA[Terms of service & Privacy policy]]></string>
    <string name="tos_check_confirm">I agree to the Terms of Service and Privacy Policy</string>
</resources>