<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView1"
        style="@style/textHeaderM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="Pengaturan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frame_8"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:background="@drawable/background_group"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:scaleType="centerCrop"
            android:src="@drawable/backround_top2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameProfile"
                style="@style/textHeaderS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama" />

            <TextView
                android:id="@+id/tvEmailProfile"
                style="@style/textBodyS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email@gmail.com" />

            <Button
                android:id="@+id/btn_edit_profile"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="Edit Profile" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        style="@style/textHeaderS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:text="Option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_8" />

    <Button
        android:id="@+id/btn_language"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_marginBottom="16dp"
        android:textAlignment="textStart"
        app:icon="@drawable/ic_language"
        app:layout_constraintBottom_toTopOf="@+id/btn_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_theme"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/night_mode"
        android:textAlignment="textStart"
        app:icon="@drawable/ic_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvAkun"
        style="@style/textHeaderS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/akun"
        app:layout_constraintTop_toBottomOf="@+id/btn_theme"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAlignment="textStart"
        app:icon="@drawable/ic_logout_24"
        app:layout_constraintEnd_toEndOf="@+id/tvAkun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvAkun"
        app:layout_constraintTop_toBottomOf="@+id/tvAkun" />
</androidx.constraintlayout.widget.ConstraintLayout>